# strange-attractors

./: Cargo.toml  build.rs
resources/shaders/: draw.wgsl  strange_attractor_compute.wgsl  strange_attractor_render.wgsl
src/: main.rs  midi.rs  particle_system.rs
src/graphics/: mod.rs
