[package]
name = "strange-attractors"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.2"
simple-game = { git = "https://github.com/bschwind/simple-game.git" }
rand = "0.8"

[build-dependencies]
naga = { version = "0.10", features = ["validate", "wgsl-in"] }
