[package]
name = "strange-attractors"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
glam = "0.23"
pollster = "0.2"
rand = "0.8"
simple-game = { git = "https://github.com/bschwind/simple-game.git" }
wgpu = "0.16"
winit = "0.28"

[build-dependencies]
naga = { version = "0.12", features = ["validate", "wgsl-in"] }
