[package]
name = "strange-attractors"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
glam = "0.25"
pollster = "0.2"
rand = "0.8"
simple-game = { git = "https://github.com/mcginty/simple-game.git" }
wgpu = "0.18"
winit = { version = "0.29", features = [
    "rwh_05",
] } # TODO(bschwind) - Remove rwh_05 when wgpu updates to raw-window-handle v0.6

[build-dependencies]
naga = { version = "0.12", features = ["validate", "wgsl-in"] }
